# gector-lightning

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
conf_examples/: inference.yaml
conf_examples/train/: stage1.yaml  stage2.yaml  stage3.yaml
data/: output_vocab.txt
scripts/data_preprocessing/: create_vocab.py  parallel_from_m2.py  preprocess.py
scripts/data_preprocessing/per_dataset_scripts/: process_conll14_test.sh  process_fce.sh  process_lang8.sh  process_nucle.sh  process_pie.sh  process_wi+locness.sh
scripts/train/: inference.py  train.py
src/gector_lightning/: callbacks.py  constants.py  data.py  losses.py  metrics.py  models.py
src/gector_lightning/utils/: errant.py  helpers.py  preprocess_data.py  spacy.py
