[tool.poetry]
name = "gector-lightning"
version = "0.1.0"
description = "Re-implementation of GECToR from Grammarly uwith pytorch-lightning using updated libraries."
authors = ["Bulut Aygunes <bulut.aygunes@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
torch = "^2.5.0"
lightning = "^2.4.0"
transformers = "^4.46.0"
omegaconf = "^2.3.0"
spacy = "^3.7.5"
torchmetrics = "^1.5.1"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}
levenshtein = "^0.26.0"
typer = "^0.12.5"
errant = "^3.0.0"
tensorboardx = "^2.6.2.2"
tensorboard = "^2.18.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"
pre-commit = "^4.0.1"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
